--- a/app/src/main/res/layout/activity_escan.xml
+++ b/app/src/main/res/layout/activity_escan.xml
@@ -9,8 +9,9 @@
 
     <Button
         android:id="@+id/ScanButton"
-        android:layout_width="wrap_content"
+        android:layout_width="274dp"
         android:layout_height="wrap_content"
+        android:background="#4CAF50"
         android:text="Escanear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
