--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:background="#F44336"
+        android:background="#ffdc00"
         android:text="Historial"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:background="#4CAF50"
+        android:background="#E91E63"
         android:text="Escanear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,9 +43,11 @@
 
     <Button
         android:id="@+id/buttonGen"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="364dp"
         android:layout_height="wrap_content"
-        android:background="#2196F3"
+        android:background="#4CAF50"
+        android:ellipsize="none"
         android:text="Generar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
